8298081: DiagnoseSyncOnValueBasedClasses doesn't report useful information for virtual threads