src/hotspot/share/runtime/synchronizer.cpp
@@ -429,7 +429,11 @@ void ObjectSynchronizer::handle_sync_on_value_based_class(Handle obj, JavaThread
   if (DiagnoseSyncOnValueBasedClasses == FATAL_EXIT) {
     ResourceMark rm(current);
     stringStream ss;
-    current->print_stack_on(&ss);
+    if (current->is_vthread_mounted()) {
+      current->print_vthread_stack_on(&ss);
+    } else {
+      current->print_stack_on(&ss);
+    }
     char* base = (char*)strstr(ss.base(), "at");
     char* newline = (char*)strchr(ss.base(), '\n');
     if (newline != NULL) {
@@ -444,7 +448,11 @@ void ObjectSynchronizer::handle_sync_on_value_based_class(Handle obj, JavaThread
     vblog.info("Synchronizing on object " INTPTR_FORMAT " of klass %s", p2i(obj()), obj->klass()->external_name());
     if (current->has_last_Java_frame()) {
       LogStream info_stream(vblog.info());
-      current->print_stack_on(&info_stream);
+      if (current->is_vthread_mounted()) {
+        current->print_vthread_stack_on(&info_stream);
+      } else {
+        current->print_stack_on(&info_stream);
+      }
     } else {
       vblog.info("Cannot find the last Java frame");
     }
